<resources>
    <string name="app_name">Inventaire</string>
    <string name="mdp">Mot de passe</string>
    <string name="username">Authentification</string>
    <string name="connect">SE CONNECTER</string>
    <string name="forget">Mot de passe oublié ?</string>
    <string name="morning_label_text">Bonjour</string>
    <string name="titre2">Choisir un depot</string>
    <string name="home_validate_button_text">VALIDER</string>
    <string name="titre3">Depot</string>
    <string name="ajoutC">Ajouter un nouveau comptage</string>
    <string name="refresh">refresh</string>

    <string-array name="nomDepot">
        <item> </item>

    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="login_pseudo_hint">Authentifiant</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_sign_in_text">se connecter</string>
    <string name="login_forget_password">Mot de passe oublié ?</string>
    <string name="ok">Ok</string>

    <string name="error_server">Le serveur est indisponible pour le moment. Merci de ré-essayer d\'ici quelques instants.</string>
    <string name="check_network">Une connexion internet est nécessaire pour utiliser l\'application</string>
    <string name="error_username_or_password">"Veuillez entrer les coordonnées nécessaires ! "</string>
    <string name="home_choose_hanger_title">Choisir un dépôt</string>
    <string name="theorical_stock">Stock théorique</string>
    <string name="real_stock">Stock réel</string>
    <string name="code_label">"Code produit : "</string>
    <string name="cancel">Cancel</string>


</resources>
