<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dridimedamine.ui.activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:padding="50dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/standard_text_color"
        android:textSize="@dimen/login_app_name_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_name"
        android:orientation="vertical"
        android:paddingStart="@dimen/login_padding_start"
        android:paddingEnd="@dimen/login_padding_end">

        <EditText
            android:id="@+id/et_pseudo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@null"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/login_pseudo_hint"
            android:paddingStart="@dimen/edit_text_padding_start"
            android:paddingEnd="@dimen/edit_text_padding_end"
            android:textColor="@color/edit_text_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="@dimen/edit_text_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_separator_height"
            android:layout_marginTop="@dimen/login_separator_margin_top"
            android:background="@color/separator_color" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/default_large_margin"
            android:background="@null"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edit_text_padding_start"
            android:paddingEnd="@dimen/edit_text_padding_end"
            android:textColor="@color/edit_text_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="@dimen/edit_text_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_separator_height"
            android:layout_marginTop="@dimen/login_separator_margin_top"
            android:background="@color/separator_color" />

        <Button
            android:id="@+id/btn_connect"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:text="@string/login_sign_in_text" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/login_forget_password"
            android:textColor="@color/edit_text_text_color"
            android:textSize="@dimen/login_forget_password_text_size" />

    </LinearLayout>


</RelativeLayout>